# pulsedata

./: pyproject.toml
.github/workflows/: python-app.yml
pulsedata/: __init__.py  api.py  test_data_is_there.py
pulsedata/20230626/0000/: 20230626_run0000_mass.hdf5
pulsedata/20230626/0001/: 20230626_run0001_mass.hdf5
pulsedata/20241005/0000/: 20241005_run0000_chan2.ljh  20241005_run0000_chan5.ljh
pulsedata/20241005/0001/: 20241005_run0001_experiment_state.txt
pulsedata/bessy_20240727/0000/: 20240727_run0000_chan4219.ljh  20240727_run0000_chan4220.ljh  20240727_run0000_experiment_state.txt
pulsedata/bessy_20240727/0000/logs/: scan0000.json
pulsedata/bessy_20240727/0001/: 20240727_run0001_chan4219.ljh  20240727_run0001_chan4220.ljh  20240727_run0001_experiment_state.txt
pulsedata/bessy_20240727/0001/logs/: scan0001.json
pulsedata/bessy_20240727/0002/: 20240727_run0002_experiment_state.txt
pulsedata/bessy_20240727/0002/logs/: calibration0002.json  scan0003.json  scan0004.json  scan0005.json
pulsedata/ebit_20240722_0006/: 20240722_run0006_chan1.off  20240722_run0006_chan2.off  20240722_run0006_experiment_state.txt
pulsedata/ebit_20240723_0000/: 20240723_run0000_experiment_state.txt  time_20240723.txt
pulsedata/truebq_202508/: 20umfoilPu239_BLANK.parquet
